--- a/package.json
+++ b/package.json
@@ -1,25 +1,31 @@
 {
-  "name": "react-ts-shelf",
+  "name": "react-ts-frame",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/styled-components": "^5.1.14",
+    "axios": "^0.21.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "start:prod": "env-cmd -f .env.prod yarn start",
+    "build": "react-app-rewired build",
+    "build:prod": "env-cmd -f .env.prod yarn build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -39,5 +45,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-plugin-import": "^1.13.3",
+    "compression-webpack-plugin": "5.0.1",
+    "customize-cra": "^1.0.0",
+    "env-cmd": "^10.1.0",
+    "file-loader": "^6.2.0",
+    "http-proxy-middleware": "^2.0.1",
+    "postcss-pxtorem": "^6.0.0",
+    "react-app-rewired": "^2.1.8",
+    "url-loader": "^4.1.1"
   }
 }
